--- a/twitter/StatusCell.xib
+++ b/twitter/StatusCell.xib
@@ -41,13 +41,14 @@
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ld1-Jv-7Yd">
                         <rect key="frame" x="10" y="10" width="48" height="48"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="width" constant="48" id="Sap-re-5pm"/>
                             <constraint firstAttribute="height" constant="48" id="xxY-sH-Ff5"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6S-Gz-vR1" userLabel="Timestamp Label">
-                        <rect key="frame" x="276.5" y="8" width="35.5" height="21"/>
+                        <rect key="frame" x="276" y="8" width="36" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="D5Z-I9-cgj"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="ybM-p9-aOu"/>
